# fishros-

./: .gitignore  LICENSE  README.md
p1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  learn_cmake  test.cpp
p2/: CMakeCache.txt  CMakeLists.txt.back  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake  p2  p2.cpp  使用colcon功能包组织节点注意事项.md
p2/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
p2/demo_cpp_pkg/: CMakeLists.txt
p2/demo_cpp_pkg/src/: p2.cpp
p2/install/: local_setup.sh  setup.ps1  setup.sh
p2/log/: latest_build  latest_list
p2/p2_ws/install/: local_setup.sh  setup.sh
p2/p2_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: package.sh
p2/p2_ws/log/: latest_build
p2/p2_ws/src/demo_cpp_pkg/: CMakeLists.txt
p2/p2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_auto.cpp  learn_functional.cpp  learn_lambda.cpp  learn_shared.cpp  learn_thread.cpp  person_node.cpp
p2/p2_ws/src/install/: local_setup.sh  setup.sh
p2/p2_ws/src/log/: latest_build  latest_list
p2/src/demo_cpp_pkg/: package.xml
p2/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
p2/src/install/demo_cpp_pkg/lib/demo_cpp_pkg/: p2
p2/src/log/: latest_build  latest_list
p3/topic_practice_ws/install/: local_setup.sh  setup.sh
p3/topic_practice_ws/log/: latest_build
p3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
p3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
p3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
p3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
p3/topic_ws/src/demo_topic_cpp/: CMakeLists.txt  package.xml
p3/topic_ws/src/demo_topic_cpp/src/: turtle_circle.cpp  turtle_control.cpp
p3/topic_ws/src/install/: local_setup.sh  setup.sh
p3/topic_ws/src/log/: latest_build
p4/p4_ws/install/: local_setup.sh  setup.sh
p4/p4_ws/log/: latest_build
p4/p4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
p4/p4_ws/src/demo_cpp_service/launch/: actions.launch.py  demo.launch.py
p4/p4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
p4/p4_ws/src/demo_python_service/: package.xml  setup.py
p4/p4_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  对人脸检测项目的改进的说明.md
p4/p4_ws/src/p4_interfaces_python/: CMakeLists.txt
p5/: rviz_tf.rviz
p5/p5__ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
p5/p5__ws/src/demo_cpp_tf/launch/: demo.launch.py
p5/p5__ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
p5/p5__ws/src/demo_python_tf/: package.xml  setup.py
p5/p5__ws/src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
p5/p5__ws/src/demo_python_tf/launch/: demo.launch.py
p6/p6_ws/src/firstrobot_description/: CMakeLists.txt  package.xml
p6/p6_ws/src/firstrobot_description/config/: display_model.rviz  fishbot_ros2_controller.yaml
p6/p6_ws/src/firstrobot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
p6/p6_ws/src/firstrobot_description/urdf/: first_robot.urdf  first_robot.urdf.xacro
p6/p6_ws/src/firstrobot_description/world/: custom_room.world
p7/p7_ws/src/autopatrol_interfaces/: package.xml
p7/p7_ws/src/autopatrol_robot/: package.xml  setup.py
p7/p7_ws/src/autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
p7/p7_ws/src/autopatrol_robot/launch/: autopatrol.launch.py
p7/p7_ws/src/fishbot_application/: package.xml  setup.py
p7/p7_ws/src/fishbot_application/fishbot_application/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py  waypoint_follower.py
p7/p7_ws/src/fishbot_navigation2/: CMakeLists.txt  package.xml
p7/p7_ws/src/fishbot_navigation2/config/: nav2_params.yaml
p7/p7_ws/src/fishbot_navigation2/launch/: navigation2.launch.py
(+71 files in other folders)
