<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_cpp_pkg</name>
  <version>0.0.0</version>
  <description>Demo C++ package</description>
  <maintainer email="lhc@todo.todo">lhc</maintainer>
  <license>Apache-2.0</license>

   <!-- 构建工具依赖应放在前面 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 普通依赖 -->
  <depend>rclcpp</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>